--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage":
+  "homepage":"https://SugarSyrup.github.io/movie_app_2021/"
 }
